Added PostgreSQL database configuration

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,5 @@ WTForms==3.1.1
 Werkzeug==3.0.3
 python-dotenv==1.0.1
 gunicorn==21.2.0
+psycopg2-binary==2.9.9  # For PostgreSQL support
+alembic==1.13.1  # For database migrations
