--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-Flask==3.0.3
-Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.7
-Flask-Login==0.6.3
-Flask-WTF==1.2.1
-WTForms==3.1.1
-Werkzeug==3.0.3
-python-dotenv==1.0.1
+Flask==2.3.3
+Flask-SQLAlchemy==3.0.5
+Flask-Migrate==4.0.4
+Flask-Login==0.6.2
+Flask-WTF==1.1.1
+WTForms==3.0.1
+Werkzeug==2.3.7
+python-dotenv==1.0.0
 gunicorn==21.2.0
-psycopg2-binary==2.9.9  # For PostgreSQL support
-alembic==1.13.1  # For database migrations
+psycopg2-binary==2.9.7
+alembic==1.12.0
+SQLAlchemy==2.0.20
