--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-Flask==2.0.3
-Flask-SQLAlchemy==2.5.1
-Flask-Migrate==3.1.0
-Flask-Login==0.5.0
-Flask-WTF==1.0.1
-WTForms==3.0.1
-Werkzeug==2.0.3
-python-dotenv==0.20.0
-gunicorn==20.1.0
-psycopg2-binary==2.9.3
-alembic==1.7.7
-SQLAlchemy==1.4.36
+Flask==3.0.0
+Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.5
+Flask-Login==0.6.3
+Flask-WTF==1.2.1
+WTForms==3.1.1
+Werkzeug==3.0.1
+python-dotenv==1.0.0
+gunicorn==21.2.0
+psycopg[binary]==3.1.12
+alembic==1.12.0
+SQLAlchemy==2.0.23
+greenlet==3.0.1
